<resources>
    <string name="app_name">Kicomo</string>
    <string name="kicomo">Kicomo</string>
    <string name="by_designer">by Kiara C. Morrow</string>
    <string name="contact">Contact</string>
    <string name="website_address">www.kiaracmorrowdesigns.com</string>
    <string name="designer_email">kiaracmorrowdesigns@gmail.com</string>
    <string name="kicomo_description">KICOMO is an in house boutique which sets out to change the societal view of beauty by showing people that society doesn\'t determine beauty but you do for yourself.</string>
    <string name="new_item_banner">new item banner</string>
    <string name="website_icon">website icon</string>
    <string name="email_image">email icon</string>
    <string name="description_title">What is Kicomo?</string>
</resources>